# RISC-V-Simulator

./: .gitignore  CMakeLists.txt  README.md  main.cpp
head_file/: ALU.h  algorithm_logic_unit.h  clock_control.h  decoder.h  load_store_buffer.h  memory.h  predictor.h  program_counter.h  register_file.h  reorder_buffer.h  reservation_staion.h  tool.h
include/: predictor.h  program_counter.h  register_file.h  reorder_buffer.h  reservation_staion.h
src/: ALU.cpp  algorithm_logic_unit.cpp  clock_control.cpp  decoder.cpp  load_store_buffer.cpp  memory.cpp  predictor.cpp  program_counter.cpp  register_file.cpp  reorder_buffer.cpp  reservation_staion.cpp  tool.cpp
